<resources>

	<string name="app_label">Shanxue0.1</string>
	<string name="search_hint">搜索词条...</string>
	<string name="app_name">Shanxue0.1</string>
	<string name="action_refresh">Refresh</string>
	<string name="recommond_heading"></string>
	<string name="recommond_author">——纪伯伦</string>
	<string name="recommond_detail">根是不屑荣名的花朵。</string>
	<string name="punch_card_number">500</string>
	<string name="punch_card_string">打卡天数</string>
	<string name="rhesis_title">《越人歌》</string>
	<string name="rhesis_sentance">山有木兮木有枝，\n心悦君兮君不知。</string>
	<string name="rhesis_dynasty_forDetial">先秦</string>
	<string name="rhesis_author">佚名</string>
	<string name="rhesis_text">今夕何夕兮，搴舟中流。\n今日何日兮，得与王子同舟。\n蒙羞被好兮，不訾诟耻。\n心几烦而不绝兮，得知王子。</string>
	<string name="rhesis_translation">山上有树木啊树木有丫枝，心中喜欢你啊你却不知此事。</string>
	<string name="rhesis_comment">①悦：喜欢。</string>
	<string name="rhesis_appreciate">
		最后两句是诗人在非常情感化的叙事和理性描述自己心情之后的情感抒发，此时的诗人已经将激动紊乱的意绪梳平，因此这种情感抒发十分艺术化，用字平易而意蕴深长，余韵袅袅。“山有木兮木有枝”是一个比兴句，既以“山有木”、“木有枝”兴起下面一句的“心说君”、“君不知”，又以“枝”谐音比喻“知”。在自然界，山上有树树上有枝，顺理成章；但在人间社会，自己对别人的感情深浅归根到底却只有自己知道，许多时候你会觉得自己对别人的感情难以完全表达，因此越人唱出了这样的歌词。而借“枝”与“知”的谐音双关关系做文章的比兴手法，也是《诗经》所惯用的。
	</string>
	<string name="detial_title_transiation">名句译文：</string>
	<string name="detial_title_appreciate">名句赏析：</string>
	<string name="detial_title_comment">名句注释：</string>


	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="title_activity_study_fragment">山有木兮木有枝，\n心悦君兮君不知。</string>
	<string name="large_text">
		"Material is the metaphor.\n\n"

		"A material metaphor is the unifying theory of a rationalized space and a system of motion."
		"The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
		"technologically advanced and open to imagination and magic.\n"
		"Surfaces and edges of the material provide visual cues that are grounded in reality. The "
		"use of familiar tactile attributes helps users quickly understand affordances. Yet the "
		"flexibility of the material creates new affordances that supercede those in the physical "
		"world, without breaking the rules of physics.\n"
		"The fundamentals of light, surface, and movement are key to conveying how objects move, "
		"interact, and exist in space and in relation to each other. Realistic lighting shows "
		"seams, divides space, and indicates moving parts.\n\n"

		"Bold, graphic, intentional.\n\n"

		"The foundational elements of print based design typography, grids, space, scale, color, "
		"and use of imagery guide visual treatments. These elements do far more than please the "
		"eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
		"imagery, large scale typography, and intentional white space create a bold and graphic "
		"interface that immerse the user in the experience.\n"
		"An emphasis on user actions makes core functionality immediately apparent and provides "
		"waypoints for the user.\n\n"

		"Motion provides meaning.\n\n"

		"Motion respects and reinforces the user as the prime mover. Primary user actions are "
		"inflection points that initiate motion, transforming the whole design.\n"
		"All action takes place in a single environment. Objects are presented to the user without "
		"breaking the continuity of experience even as they transform and reorganize.\n"
		"Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
		"Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

		"3D world.\n\n"

		"The material environment is a 3D space, which means all objects have x, y, and z "
		"dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
		"positive z-axis extending towards the viewer. Every sheet of material occupies a single "
		"position along the z-axis and has a standard 1dp thickness.\n"
		"On the web, the z-axis is used for layering and not for perspective. The 3D world is "
		"emulated by manipulating the y-axis.\n\n"

		"Light and shadow.\n\n"

		"Within the material environment, virtual lights illuminate the scene. Key lights create "
		"directional shadows, while ambient light creates soft shadows from all angles.\n"
		"Shadows in the material environment are cast by these two light sources. In Android "
		"development, shadows occur when light sources are blocked by sheets of material at "
		"various positions along the z-axis. On the web, shadows are depicted by manipulating the "
		"y-axis only. The following example shows the card with a height of 6dp.\n\n"

		"Resting elevation.\n\n"

		"All material objects, regardless of size, have a resting elevation, or default elevation "
		"that does not change. If an object changes elevation, it should return to its resting "
		"elevation as soon as possible.\n\n"

		"Component elevations.\n\n"

		"The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
		"does not vary from 6dp in one app to 16dp in another app).\n"
		"Components may have different resting elevations across platforms, depending on the depth "
		"of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

		"Responsive elevation and dynamic elevation offsets.\n\n"

		"Some component types have responsive elevation, meaning they change elevation in response "
		"to user input (e.g., normal, focused, and pressed) or system events. These elevation "
		"changes are consistently implemented using dynamic elevation offsets.\n"
		"Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
		"to the component’s resting state. They ensure that elevation changes are consistent "
		"across actions and component types. For example, all components that lift on press have "
		"the same elevation change relative to their resting elevation.\n"
		"Once the input event is completed or cancelled, the component will return to its resting "
		"elevation.\n\n"

		"Avoiding elevation interference.\n\n"

		"Components with responsive elevations may encounter other components as they move between "
		"their resting elevations and dynamic elevation offsets. Because material cannot pass "
		"through other material, components avoid interfering with one another any number of ways, "
		"whether on a per component basis or using the entire app layout.\n"
		"On a component level, components can move or be removed before they cause interference. "
		"For example, a floating action button (FAB) can disappear or move off screen before a "
		"user picks up a card, or it can move if a snackbar appears.\n"
		"On the layout level, design your app layout to minimize opportunities for interference. "
		"For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
		"when a user tries to pick up one of cards.\n\n"
	</string>
	<string name="action_settings">Settings</string>
	<string name="momo">momo:</string>
	<string name="hint">hint:</string>
	<string name="input_momo">input momo...</string>
	<string name="add">add</string>
	<string name="input_hint">input_hint...</string>
	<string name="item_card_update_plus">增加节点</string>
	<string name="item_card_update_minus">减少节点</string>
	<string name="item_card_update_zero">节点置零</string>
	<string name="item_card_delete">删除节点</string>
</resources>
