<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		tools:showIn="@layout/activity_study_fragment"
		android:background="@color/colorBrown"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
	<LinearLayout
			android:layout_width="310dp"
			android:layout_gravity="center_horizontal"
			android:layout_height="wrap_content"
			android:paddingTop="24dp"
			android:orientation="vertical">

		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_gravity="center"
				  android:textSize="25dp"
				  android:text="@string/rhesis_title"
				  android:id="@+id/tvRhesisTitle"
		/>
		<LinearLayout android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:layout_marginTop="10dp"
					  android:orientation="horizontal"
					  android:layout_gravity="right"
					  android:gravity="right"
		>

			<TextView android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:paddingRight="10dp"
					  android:text="@string/rhesis_dynasty_forDetial"
					  android:id="@+id/tvRhesisDynasty"
			/>

			<TextView android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:text="@string/rhesis_author"
					  android:id="@+id/tvRhesisAuthor"
			/>



		</LinearLayout>
		<LinearLayout android:layout_width="match_parent"
					  android:layout_height="wrap_content"
					  android:layout_marginTop="50dp"
					  android:gravity="center"
					  android:layout_gravity="center"
					  android:orientation="vertical"
					  android:id="@+id/llDetialText"
		>
		</LinearLayout>
		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="50dp"
				  android:textSize="17dp"
				  android:textColor="@color/colorAccent"
				  android:text="@string/detial_title_transiation"
		/>
		<TextView android:layout_width="match_parent"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="10dp"
				  android:textSize="17dp"
				  android:textColor="@color/colorBlack"

				  android:text="@string/rhesis_translation"
				  android:id="@+id/tvRhesisTransiation"/>
		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="30dp"
				  android:textSize="17dp"
				  android:textColor="@color/colorAccent"
				  android:text="@string/detial_title_comment"
		/>
		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="10dp"
				  android:textSize="17dp"
				  android:textColor="@color/colorBlack"
				  android:text="@string/rhesis_comment"
				  android:id="@+id/tvRhesisComment"/>
		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="30dp"
				  android:textSize="17dp"
				  android:textColor="@color/colorAccent"
				  android:text="@string/detial_title_appreciate"
		/>
		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_marginTop="10dp"
				  android:textSize="17dp"
				  android:textColor="@color/colorBlack"

				  android:text="@string/rhesis_appreciate"
				  android:id="@+id/tvRhesisAppreciate"/>
		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:layout_marginRight="5dp"
				  android:layout_marginTop="10dp"
				  android:textColor="@color/colorPink"
				  android:layout_marginLeft="200dp"
				  android:id="@+id/tvDetialSurplusEntry"
		/>
		<TextView android:layout_width="wrap_content"
				  android:layout_height="wrap_content"
				  android:textColor="@color/colorPink"
				  android:layout_marginTop="10dp"
				  android:layout_marginLeft="200dp"
				  android:id="@+id/tvDetialEntryNode"/>
		<LinearLayout android:layout_width="300dp"
					  android:layout_height="61.8dp"
					  android:layout_marginTop="50dp"
					  android:layout_marginRight="10dp"
					  android:id="@+id/llBtnNext"
					  android:background="@drawable/round_rect_shape">
			<Button android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:text="下一个"
					android:background="@color/colorTransparent"
					android:id="@+id/btnNext"/>


		</LinearLayout>
		<LinearLayout android:layout_width="330dp"
					  android:layout_height="wrap_content"
					android:orientation="horizontal"
		>


			<ImageView
					android:layout_width="120dp"
					android:layout_height="1dp"
					android:layout_marginTop="50dp"
					android:layout_marginBottom="15dp"
					android:background="@color/colorGrey"
			/>
			<TextView android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:textColor="@color/colorGrey"
					  android:layout_marginLeft="3dp"
					  android:layout_marginTop="40dp"
					  android:layout_marginBottom="20dp"
					  android:text="BottomLine"
					  android:textStyle="italic"/>
			<ImageView
					android:layout_width="120dp"
					android:layout_height="1dp"
					android:layout_marginLeft="3dp"
					android:layout_marginTop="50dp"
					android:layout_marginBottom="15dp"
					android:background="@color/colorGrey"
			/>

		</LinearLayout>

	</LinearLayout>


</android.support.v4.widget.NestedScrollView>
